kubernetes/apps/networking/media-pvr-ext/app/bazarr/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: readrr
  annotations:
    external-dns.alpha.kubernetes.io/target: internal.${SECRET_DOMAIN}
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: internal
  rules:
    - host: readarr.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: media-pvr-ext
                port:
                  number: 8787
